Converted to NOB build system

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "outputNameNoExtension": "my-raylib-game",
+  "outputNameNoExtension": "my-raylib-game", // TEMPLATE: Rename to project name
+  "files.associations": {
+    "debugutils.h": "c",
+    "utils.h": "c",
+    "windows.h": "c",
+    "texture_packer_utils.h": "c"
+  }
 }
+
